--- a/server-side/package.json
+++ b/server-side/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
+    "fetch": "^1.1.0",
     "mysql2": "^3.5.2",
     "nodemon": "^3.0.1"
   }
